# uom-thesis

./: .gitignore  Dockerfile  Makefile  README.md  bootstrap.sh  download_and_process_mirage.sh  download_snomed.sh  environment.yml  exp-ont-m-rag.py  llm_utils.py  load_questions_and_extract_entities.py  load_taxonomy.py  math_functools.py  prepare_deps.sh  preprocess_entity_lexicon.py  process_snomed.sh  pyproject.toml  requirements.txt
data/: dataset_iri_list.json  eval_dataset_50_ORIGINAL.json  eval_dataset_50_UPDATED.json  manually-annotated.json  subset_abnormalities_original.json  subset_anatomy_and_abnormalities_combined.json  subset_anatomy_original.json  subset_devices_original.json  subset_disorder_original.json  subset_disorder_substance_procedure_devices_combined.json  subset_procedure_original.json  subset_substance_original.json
docs/: early_instruction_notes.md  early_training_notes.md
logs/: multi-target.output  qa_runs.csv  qa_runs_remote.csv  single-target.output  subset-anatomical-combined.output  subset-anatomical-morph-abnorm.output  subset-anatomical.output  subset-combined-1.output  subset-device.output  subset-disorder.output  subset-procedure.output  subset-substance.output  wandb_export_all_runs.csv
notebooks/: retrieval_notebook.ipynb
scripts/: bootstrap.sh  build_eval_data.sh  build_hit_data.sh  build_ont_data.sh  compute_normalised_inter_and_diff.py  download_and_process_mirage.sh  download_gdrive_zip.sh  download_models.sh  download_snomed.sh  download_snomed_fallback.sh  entity_lexicon_to_label_mappings.py  get_snomed.py  hit-rag.sh  (+27 more)
(+143 files in other folders)
